fill in content for marry me chicken page including image

--- a/recipes/marrychicken.html
+++ b/recipes/marrychicken.html
@@ -6,7 +6,32 @@
     <title>TOP Recipes|Marry Me Chicken</title>
 </head>
 <body>
-    <h1>Marry Me Chicken Recipe</h1>
     <a href="../index.html">Home</a>
+    <h1>Marry Me Chicken Recipe</h1>
+    <img src="../images/marry-me-chicken.jpg.avif" alt="chicken dish with creamy orange sauce" width="400" height="300">
+
+    <h3>Description</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam inventore consequatur vero veniam vel. Exercitationem, rem? Voluptatibus aliquam ex repellat quas, cumque dolorum voluptates illo asperiores quibusdam consequuntur adipisci facere!<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus magnam ipsa iusto vel, omnis laudantium eum voluptatem quaerat quod! Mollitia dolor voluptatum ipsum optio doloribus suscipit sequi repellendus, iure accusamus!</p>
+
+    <h4>Ingredients</h4>
+    <ul>
+        <li>1/2 cup of sundried tomatoes</li>
+        <li>1 cup of chicken broth</li>
+        <li>1 cup of heavy whipping cream</li>
+        <li>approx. 1 lb of chicken breast or boneless thigh</li>
+        <li>cajun seasoning</li>
+        <li>4 garlic cloves</li>
+        <li>1/3 of an onion</li>
+    </ul>
+
+    <h4>Steps</h4>
+    <ol>
+        <li>Heat up a pan on medium heat, add oil add in chicken breast and sear until golden brown</li>
+        <li>Take out chicken breast and place in seperate container, now add in onions and garlic to pan</li>
+        <li>Once onionsa nd garlic look translucent, also add in sundried tomatoes and continue to saute for 5 minutes</li>
+        <li>Add in chicken broth and reduce until spatula can scrape bottom of the pan</li>
+        <li>Turn heat to low and add in cream</li>
+        <li>Add chicken back in and continue to heat on low for 5 minutes</li>
+    </ol>
 </body>
 </html>
