--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/marrychicken.html">Marry Me Chicken!</a>
+    <ul>
+        <li><a href="./recipes/marrychicken.html">Marry Me Chicken!</a></li>
+        <li></li>
+        <li></li>
+    </ul>
+    
 </body>
 </html>
