add grilled cheese page with content, add links between homepage and grilled cheese page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <ul>
         <li><a href="./recipes/marrychicken.html">Marry Me Chicken!</a></li>
-        <li></li>
-        <li></li>
+        <li><a href="./recipes/grilled-cheese.html">Best Grilled Cheese Ever</a></li>
+        <li><a href="./recipes/scrambled-egg.html">Scramble Ramble Eggs</a></li>
     </ul>
     
 </body>
